# sinn_toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
concept_models/: __init__.py  base.py
concept_models/bcos/: __init__.py  api.py  model.py  settings.py
concept_models/bcos/examples/: bcos_tutorial.ipynb  test_bcos_model.py
concept_models/bcos/training/: trainer.py
concept_models/protopnet/: __init__.py  adapter.py  features.py  model.py  resnet_features.py  settings.py
concept_models/protopnet/examples/: test_protopnet_model.py
concept_models/protopool/: __init__.py  adapter.py  densenet_features.py  model_cap_final.py  resnet_features.py  settings.py  vgg_features.py
concept_models/protopool/examples/: test_protopool_model.py
concept_models/protovit/: LICENSE  README.md  __init__.py  adapter.py  main.py  model.py  settings.py  settings2.py  settings3.py  settings3_fixed.py  train_and_test.py
concept_models/protovit/examples/: setup_env.sh  test_protovit_model.py
concept_models/protovit/preprocess_sample_code/: data_crop.py  data_crop_sample.ipynb  data_split_sample.ipynb  split_code.py  split_code2.py  split_code3.py
concept_models/protovit/spatial_alignment_test/: adv_setting.py  run_adv_test.py
concept_models/protovit/tools/: deit_features.py
concept_models/tesnet/: __init__.py  adapter.py  model_cap.py  train_and_test_cap.py
concept_models/tesnet/examples/: test_tesnet_model.py
concept_models/tesnet/models/: __init__.py  resnet_features.py
concept_models/tesnet/util/: __init__.py
(+11 files in other folders)
