[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concept_models"
version = "0.1.0"
description = "A collection of concept-based neural network models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}

[tool.setuptools.packages.find]
include = ["concept_models*"]
exclude = ["tests*", "examples*"]

[tool.ruff]
extend-ignore = [
    "E501",  # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403"]